some changes made

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <input type="text" id="fval" name="fval" class="input" value="" /><br />
           <label for="sval"><strong>Second Value:</strong></label><br />
           <input type="text" id="sval" name="sval" class="input" value="" /><br /><br />
-          <button id="btn1" class="button">Swap</button>&nbsp;<span id="invalid"></span>
+          <button id="btn1" type="button" class="button">Swap</button>&nbsp;<span id="invalid"></span>
         </form>
       </div>
 
