added new operation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <input type="text" id="fval" name="fval" class="input" value="" /><br />
           <label for="sval"><strong>Second Value:</strong></label><br />
           <input type="text" id="sval" name="sval" class="input" value="" /><br /><br />
-          <button id="btn1" type="button" class="button">Swap</button>&nbsp;<span id="invalid"></span>
+          <button id="btn1" type="button" class="button">Swap</button>&nbsp;<span id="invalid" class="output"></span>
         </form>
       </div>
 
@@ -34,7 +34,7 @@
           <label for="input"><strong>Input:</strong></label><br />
           <input type="text" placeholder="string" id="input_frequency" class="input" name="input" value=""/><br /><br />
           <button id="btn2" class="button">Count</button>
-          <p id="invalid2"></p>
+          <p id="invalid2" class="output"></p>
         </form>
       </div>
     </div>
@@ -48,7 +48,7 @@
           <input type="text" placeholder="string" id="firstInput" class="input" name="firstInput" value="" /><br />
           <label for="secondInput"><strong>Second Input:</strong></label><br />
           <input type="text" placeholder="string" id="secondInput"class="input" name="secondInput" value="" /><br /><br />
-          <button id="btn3" class="button" >Check Anagram</button> &nbsp;<span id="output"></span>
+          <button id="btn3" class="button" >Check Anagram</button> &nbsp;<span id="output" class="output"></span>
         </form>
       </div>
 
@@ -59,9 +59,9 @@
           <label for="inputNumber"><strong>Numbers:</strong></label><br />
           <input type="text" placeholder="integer" id="inputNumber" class="input" name="inputNumber" value=""/><br /><br />
           <button id="btn4" class="button">Check Numbers</button><br>
-          <span id="even"></span><br>
-          <span id="odd"></span><br>
-          <span id="prime"></span>
+          <span id="even" class="output"></span><br>
+          <span id="odd" class="output"></span><br>
+          <span id="prime" class="output"></span>
         </form>
       </div>
     </div>
@@ -74,7 +74,7 @@
           <label for="sort_input"><strong>Enter the Values:</strong></label><br />
           <input type="text" placeholder="numbers/strings" id="sort_input" class="input" name="input" value=""/><br /><br />
           <button id="btn5" class="button">Sort</button>
-          <p id="invalid7"></p>
+          <p id="invalid7" class="output"></p>
         </form>
       </div>
 
@@ -85,13 +85,25 @@
           <label for="search_input"><strong>Input the Array:</strong></label> 
           <input type="text" placeholder="numbers" id="search_input" class="input" name="firstInput" value="" /><p id="eror"></p>
           <label for="value_input"><strong>Input Number you want to Search:</strong></label>
-          <input type="text" placeholder="value" id="value_input"class="input" name="secondInput" value="" /> &nbsp;<span id="output5"></span><br /><br />
-          <button id="btn6" class="button" >Get Value</button> &nbsp;<span id="output1"></span>
-          <button id="btn7" class="button" >Get Position</button> &nbsp;<span id="output2"></span>
+          <input type="text" placeholder="value" id="value_input"class="input" name="secondInput" value="" /> &nbsp;<span id="output5" class="output"></span><br /><br />
+          <button id="btn6" class="button" >Get Value</button> &nbsp;<span id="output1" class="output"></span>
+          <button id="btn7" class="button" >Get Position</button> &nbsp;<span id="output2" class="output"></span>
         </form>
       </div>
-
-
+    </div>
+    
+    <div class="container1">
+    <!-- code for SubString -->
+    <div id="subString">
+      <h2>Check for SubString</h2>
+      <form action="">
+        <label for="input_string"><strong>String:</strong></label> 
+        <input type="text" placeholder="string" id="input_string" class="input" name="" value="" /><p id="output3"></p>
+        <label for="input_substring"><strong>Substring:</strong></label>
+        <input type="text" placeholder="Substring" id="input_substring" class="input" name="" value="" /> &nbsp;<span id="output5"></span><br /><br />
+        <button id="btn8" class="button" >Match</button> &nbsp;<p id="output4" class="output"></p>
+      </form>
+    </div>
     </div>
 
 
